--- a/gaptrain/common/gp_intro/gp.tex
+++ b/gaptrain/common/gp_intro/gp.tex
@@ -64,16 +64,17 @@ where $\boldsymbol{w}$ are the weights to be found and $\phi_i$ is a non-linear 
 		w &\sim \mathcal{N}(0, c\mathbb{I})  \qquad\;\; : \quad c \in \mathbb{R}
 	\end{aligned}	
 \end{equation}
-where the asterisk denotes a predicted value and $\boldsymbol{w}^T\tilde{\boldsymbol{x}} := z$ form the GP. 
+where the asterisk denotes a predicted value, $\boldsymbol{w}^T\tilde{\boldsymbol{x}} := z$ form the GP and $\epsilon$ is a Gaussian error.
 \\\\
 To do inference requires the posterior (predictive) distribution of $y$, given a set of known values. For the full set of $y$ then,\footnote{As the sum of independent MVNs just sum their means and covariances.}
 \begin{equation}
 	\begin{aligned}
-		\boldsymbol{y} &= \boldsymbol{z} + \boldsymbol{\varepsilon} \\
+		\boldsymbol{y}^* &= \boldsymbol{z} + \boldsymbol{\varepsilon} \\
 		&\sim \mathcal{N}(\boldsymbol{\mu}, \mathsf{K} + \sigma^2\mathbb{I})
 	\end{aligned}
 \end{equation} 
 defining $\mathsf{C} = \mathsf{K} + \sigma\mathbb{I}$ and splitting the vectors and matrices into known (train) and an unknown (${}^*$) components,
+
 \begin{equation}
 	\begin{pmatrix}
 		y^*\\
@@ -98,7 +99,12 @@ then the conditional distribution of $y^*$ is,
 	(y^* | \boldsymbol{y}_\text{train}) \sim \mathcal{N}(\mu^* +  \mathsf{C}^{* T}_\text{train}\mathsf{C}_\text{train}^{-1}(\boldsymbol{y}_\text{train} - \boldsymbol{\mu}_\text{train})
 	, \mathsf{D})
 \end{equation}
+where $\mathsf{D}$ is the covariance the exact form of which is omitted. 
+\\\\
+{\large\bfseries{References}}
 
+[1] C. E. Rasmussen and C. K. I. Williams, Gaussian Processes for Machine Learning, the MIT Press, 2006,
+ISBN 026218253X.
 
 
 \end{document}
